--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: auto;
+  margin-left: 20px;
 }
 
 code {
