--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,17 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: auto;
-  margin-left: 20px;
+  background-image: url('./img/bimg.jpg') ;
+  background-repeat: no-repeat;
+background-attachment: fixed;
+background-size: cover;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#root{
+  margin: 50px;
 }
