--- a/src/App.css
+++ b/src/App.css
@@ -4,17 +4,58 @@ input {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 25px;
     border: solid black;
+    background: linear-gradient(to right, slategrey, silver);
+    color: white;
     padding: 10px;
+}
+input::placeholder{
+    color: yellow;
 }
 
 button {
+    border: solid black;
     font-size: 25px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 10px;
-    border: solid yellow;
-    background: linear-gradient(to right, yellow, orange)
+    background: #6441A5;
+    width: auto;
+    color:  white;
+    border-radius: 10%;
 }
 
-span {
+.key {
     font-weight: bolder;
     font-size: 1.3em;
+    text-decoration: underline;
+}
+
+.value{
+    font-weight: bold;
+    font-size: 1.45em;
+    font-style: oblique;
+    color:  darkblue;
+}
+
+
+.title>h1{
+    font-size: 50px;
+    font-weight: bolder;
+    text-decoration: underline;
+}
+
+.result{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
+
+.form, .title{
+    text-align: center;
+    margin-top: 30px;
+}
+
+
+li{
+    margin-top: 20px;
 }
