--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
 input {
-    width: 50%;
+    width: 30%;
     margin-right: 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 25px;
     border: solid black;
-    background: linear-gradient(to right, slategrey, silver);
+    background: linear-gradient(to right, slategrey, grey);
     color: white;
     padding: 10px;
+    transition:  1s;
 }
+
 input::placeholder{
     color: yellow;
 }
@@ -59,3 +61,4 @@ button {
 li{
     margin-top: 20px;
 }
+
